<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/app_name"
            android:textColor="@color/accent_orange"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:text="@string/home_subtitle"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body" />

        <Button
            android:id="@+id/btnConfigure"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/bg_channel_badge"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingHorizontal="@dimen/margin_large"
            android:text="@string/home_configure"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_meta" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/accent_orange"
        android:visibility="gone" />

</FrameLayout>
